--- a/Database/Database/packages.config
+++ b/Database/Database/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net452" />
+  <package id="NHibernate.Linq" version="1.0" targetFramework="net452" />
   <package id="NHibernate.Mapping.Attributes" version="4.0.0.1" targetFramework="net452" />
 </packages>
