--- a/Database/Database/Database.csproj
+++ b/Database/Database/Database.csproj
@@ -59,22 +59,35 @@
     <Compile Include="Common\IEntity.cs" />
     <Compile Include="Common\Impl\Repository.cs" />
     <Compile Include="Common\Impl\RepositoryFactory.cs" />
+    <Compile Include="Common\ObserverPattern\IObservable.cs" />
+    <Compile Include="Common\ObserverPattern\IObserver.cs" />
+    <Compile Include="Common\ObserverPattern\Subject.cs" />
     <Compile Include="Configuration\DatabaseConfiguration.cs" />
     <Compile Include="Common\IRepository.cs" />
-    <Compile Include="Configuration\Dialect.cs" />
-    <Compile Include="Configuration\Driver.cs" />
     <Compile Include="Connection\Database.cs" />
     <Compile Include="Connection\DbUser.cs" />
     <Compile Include="Connection\Defaults\DefaultConfig.cs" />
     <Compile Include="Connection\IDbUser.cs" />
     <Compile Include="DatabaseException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Database.licenseheader" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
