start user manager

--- a/BenutzerverwaltungBL/BenutzerverwaltungBL/BenutzerverwaltungBL.csproj
+++ b/BenutzerverwaltungBL/BenutzerverwaltungBL/BenutzerverwaltungBL.csproj
@@ -30,7 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Database">
+    <Reference Include="Database, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Database\Database\bin\Debug\Database.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate">
@@ -52,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Common\MD5Hash.cs" />
     <Compile Include="Common\UserdataGenerator.cs" />
+    <Compile Include="Configuration\Configure.cs" />
     <Compile Include="Controller\UserManager.cs" />
     <Compile Include="Model\BusinesObjects\UserAuthenticationData.cs" />
     <Compile Include="Model\DataObjects\Customer.cs" />
