--- a/Database/Database/app.config
+++ b/Database/Database/app.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Database.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -12,4 +17,26 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <Database.Properties.Settings>
+      <setting name="User" serializeAs="String">
+        <value>d5a09</value>
+      </setting>
+      <setting name="Password" serializeAs="String">
+        <value>d5a</value>
+      </setting>
+      <setting name="IpAdresseIntern" serializeAs="String">
+        <value>192.168.128.152</value>
+      </setting>
+      <setting name="IpAdresseExtern" serializeAs="String">
+        <value>212.152.179.117</value>
+      </setting>
+      <setting name="IpCurrent" serializeAs="String">
+        <value>192.168.128.152</value>
+      </setting>
+      <setting name="ServiceName" serializeAs="String">
+        <value>ora11g</value>
+      </setting>
+    </Database.Properties.Settings>
+  </userSettings>
 </configuration>
