--- a/Benutzerverwaltung/Benutzerverwaltung/Benutzerverwaltung.csproj
+++ b/Benutzerverwaltung/Benutzerverwaltung/Benutzerverwaltung.csproj
@@ -35,6 +35,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BenutzerverwaltungBL">
+      <HintPath>..\..\BenutzerverwaltungBL\BenutzerverwaltungBL\bin\Debug\BenutzerverwaltungBL.dll</HintPath>
+    </Reference>
+    <Reference Include="Database">
+      <HintPath>..\..\BenutzerverwaltungBL\BenutzerverwaltungBL\bin\Debug\Database.dll</HintPath>
+    </Reference>
     <Reference Include="Iesi.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\packages\Iesi.Collections.4.0.0.4000\lib\net40\Iesi.Collections.dll</HintPath>
       <Private>True</Private>
