--- a/BenutzerverwaltungBL/BenutzerverwaltungBL/BenutzerverwaltungBL.csproj
+++ b/BenutzerverwaltungBL/BenutzerverwaltungBL/BenutzerverwaltungBL.csproj
@@ -53,8 +53,8 @@
   <ItemGroup>
     <Compile Include="Common\MD5Hash.cs" />
     <Compile Include="Common\UserdataGenerator.cs" />
-    <Compile Include="Configuration\Configure.cs" />
-    <Compile Include="Controller\UserManager.cs" />
+    <Compile Include="Configuration\ConfigureBl.cs" />
+    <Compile Include="Controller\CustomerManager.cs" />
     <Compile Include="Model\BusinesObjects\UserAuthenticationData.cs" />
     <Compile Include="Model\DataObjects\Customer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
