--- a/Benutzerverwaltung/Benutzerverwaltung/Benutzerverwaltung.csproj
+++ b/Benutzerverwaltung/Benutzerverwaltung/Benutzerverwaltung.csproj
@@ -57,6 +57,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows" />
+    <Reference Include="System.Workflow.Activities" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
