--- a/Benutzerverwaltung/Benutzerverwaltung/packages.config
+++ b/Benutzerverwaltung/Benutzerverwaltung/packages.config
@@ -3,4 +3,5 @@
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net452" />
   <package id="NHibernate.Mapping.Attributes" version="4.0.0.1" targetFramework="net452" />
+  <package id="Wpg" version="1.0.20150225.1" targetFramework="net452" />
 </packages>
