--- a/LagerVerwaltung/LagerVerwaltung/LagerVerwaltung.csproj
+++ b/LagerVerwaltung/LagerVerwaltung/LagerVerwaltung.csproj
@@ -58,6 +58,9 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="Verwaltung">
+      <HintPath>..\..\BenutzerverwaltungBL\BenutzerverwaltungBL\bin\Debug\Verwaltung.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -68,11 +71,11 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Helpers\Autoteile.cs" />
+    <Compile Include="Helpers\ExceptionManger.cs" />
     <Compile Include="Helpers\Message.cs" />
     <Compile Include="ViewModel\BestellenViewModel.cs" />
     <Compile Include="ViewModel\ChangeTeilViewModel.cs" />
     <Compile Include="ViewModel\CreateTeilViewModel.cs" />
-    <Compile Include="ViewModel\ImportantMessageViewModel.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="View\BestellenView.xaml.cs">
       <DependentUpon>BestellenView.xaml</DependentUpon>
@@ -82,9 +85,6 @@
     </Compile>
     <Compile Include="View\CreateTeilView.xaml.cs">
       <DependentUpon>CreateTeilView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\ImportantMessageDetailView.xaml.cs">
-      <DependentUpon>ImportantMessageDetailView.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -108,10 +108,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\CreateTeilView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\ImportantMessageDetailView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
