--- a/Benutzerverwaltung/Benutzerverwaltung/Benutzerverwaltung.csproj
+++ b/Benutzerverwaltung/Benutzerverwaltung/Benutzerverwaltung.csproj
@@ -84,14 +84,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Helpers\CustomerDetailsMode.cs" />
-    <Compile Include="Helpers\ExceptionHelper.cs" />
-    <Compile Include="Helpers\Extensions.cs" />
-    <Compile Include="Helpers\RelayCommand.cs" />
-    <Compile Include="Helpers\SettingsDialog.xaml.cs">
-      <DependentUpon>SettingsDialog.xaml</DependentUpon>
+    <Compile Include="Controls\CustomerButton.xaml.cs">
+      <DependentUpon>CustomerButton.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\SettingsManager.cs" />
+    <Compile Include="Helpers\CustomerDetailsMode.cs" />
+    <Compile Include="Helpers\RelayCommand.cs" />
     <Compile Include="Model\ModelBase.cs" />
     <Compile Include="ViewModel\CreateCustomerViewModel.cs" />
     <Compile Include="ViewModel\DetailsViewModel.cs" />
@@ -109,7 +106,7 @@
     <Compile Include="View\UserInfoView.xaml.cs">
       <DependentUpon>UserInfoView.xaml</DependentUpon>
     </Compile>
-    <Page Include="Helpers\SettingsDialog.xaml">
+    <Page Include="Controls\CustomerButton.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
