keeeine ahnung aba wichtig

--- a/LagerVerwaltung/LagerVerwaltung/LagerVerwaltung.csproj
+++ b/LagerVerwaltung/LagerVerwaltung/LagerVerwaltung.csproj
@@ -59,11 +59,15 @@
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
     <Reference Include="Verwaltung">
-      <HintPath>..\..\BenutzerverwaltungBL\BenutzerverwaltungBL\bin\Debug\Verwaltung.dll</HintPath>
+      <HintPath>..\..\Autohausverwaltung\Verwaltung\bin\Debug\Verwaltung.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="WPG, Version=2.0.4722.33761, Culture=neutral, PublicKeyToken=8e0591ccfb808881, processorArchitecture=MSIL">
+      <HintPath>..\packages\Wpg.1.0.20150225.1\lib\Net\WPG.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -71,7 +75,6 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Helpers\Autoteile.cs" />
-    <Compile Include="Helpers\ExceptionManger.cs" />
     <Compile Include="Helpers\Message.cs" />
     <Compile Include="ViewModel\BestellenViewModel.cs" />
     <Compile Include="ViewModel\ChangeTeilViewModel.cs" />
