--- a/LagerVerwaltung/LagerVerwaltung/LagerVerwaltung.csproj
+++ b/LagerVerwaltung/LagerVerwaltung/LagerVerwaltung.csproj
@@ -92,6 +92,9 @@
     <Compile Include="View\CreateTeilView.xaml.cs">
       <DependentUpon>CreateTeilView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\Geomap.xaml.cs">
+      <DependentUpon>Geomap.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -114,6 +117,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\CreateTeilView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Geomap.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -147,7 +154,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="ScriptAndPages\Map.html" />
+    <Content Include="ScriptAndPages\map.js" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
