--- a/BenutzerverwaltungBL/BenutzerverwaltungBL/BenutzerverwaltungBL.csproj
+++ b/BenutzerverwaltungBL/BenutzerverwaltungBL/BenutzerverwaltungBL.csproj
@@ -30,7 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Database">
+    <Reference Include="Database, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Database\Database\bin\Debug\Database.dll</HintPath>
     </Reference>
     <Reference Include="itextsharp, Version=5.5.10.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
