--- a/LagerVerwaltung/LagerVerwaltung/packages.config
+++ b/LagerVerwaltung/LagerVerwaltung/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
+  <package id="JSON" version="1.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net452" />
   <package id="NHibernate.Mapping.Attributes" version="4.0.0.1" targetFramework="net452" />
   <package id="Wpg" version="1.0.20150225.1" targetFramework="net452" />
