--- a/LagerVerwaltung/LagerVerwaltung/LagerVerwaltung.csproj
+++ b/LagerVerwaltung/LagerVerwaltung/LagerVerwaltung.csproj
@@ -91,6 +91,9 @@
     <Compile Include="ViewModel\ChangeTeilViewModel.cs" />
     <Compile Include="ViewModel\CreateTeilViewModel.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
+    <Compile Include="View\BasicSettings.xaml.cs">
+      <DependentUpon>BasicSettings.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\BestellenView.xaml.cs">
       <DependentUpon>BestellenView.xaml</DependentUpon>
     </Compile>
@@ -116,6 +119,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\BasicSettings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\BestellenView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
